Add support for validating pod logs in deployments/statefulsets

--- a/examples/manifests/dev/rbac-template.yaml
+++ b/examples/manifests/dev/rbac-template.yaml
@@ -25,6 +25,7 @@ items:
     - endpoints
     - pods
     - namespaces
+    - pods/log
     verbs:
     - get
     - list
@@ -62,6 +63,7 @@ items:
     - endpoints
     - pods
     - namespaces
+    - pods/log
     verbs:
     - get
     - list
