Add some fixes and tests to CI
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,26 @@ jobs:
         command: make manifests
     - run:
         command: git diff --exit-code
+  test:
+    machine:
+      image: ubuntu-2004:current
+    steps:
+    - checkout
+    - run:
+        name: Install Kind
+        command: |
+          curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/v0.18.0/kind-linux-amd64
+          chmod +x kind
+          sudo mv kind /usr/local/bin/
+    - run:
+        name: Install kubectl
+        command: |
+          curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.0/bin/linux/amd64/kubectl
+          chmod +x kubectl
+          sudo mv kubectl /usr/local/bin/
+    - run:
+        name: Run tests
+        command: make test
   build:
     docker:
     - image: cimg/go:1.19
@@ -39,6 +59,10 @@ workflows:
   make-and-build:
     jobs:
     - make
+    - test:
+        requires:
+        - make
     - build:
         requires:
         - make
+        - test
